Fixed clear response issue and question alignment issue

--- a/app/assets/stylesheets/students/home.scss
+++ b/app/assets/stylesheets/students/home.scss
@@ -204,3 +204,7 @@
   margin-bottom: 110px !important;
 }
 
+.text-indent-0 *{
+  text-indent: 0;
+}
+
